--- a/src/components/UsersTable/UsersTable.scss
+++ b/src/components/UsersTable/UsersTable.scss
@@ -5,22 +5,39 @@
     justify-content: center;
     width: 1280px;
     margin-top: 323px;
-   margin-left: 31px;
+    margin-left: 31px;
     border-collapse: collapse;
-   
-    
+    font-family: Poppins;
+    font-weight: 400px;
+    font-size: 18px;
+    line-height: 27px;
 
-    thead{
-        height: 43px;
+
+
+    thead {
+
         background-color: #811AC0;
         display: flex;
         align-items: center;
         justify-content: center;
-        
-       
+
+
 
     }
-    th,td {
+
+    th,
+    td {
         width: 190px;
+        height: 43px;
     }
+
+    td {
+        text-align: center;
+        border-bottom: 1px solid;
+        border-color: #212121;
+        padding: 12px 0px;
+        color: #D6D6D6;
+        ;
+    }
+
 }
