feat: Tabela com estilização optimizada

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 h1{
   text-align: center;
-  margin-top: 133px;
+  margin-top: 38px;
   font-size: 32px;
   font-weight: 700;
-
+  margin-bottom: -40px;
 }
