--- a/src/components/UsersTable/UsersTable.scss
+++ b/src/components/UsersTable/UsersTable.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: center;
     width: 1280px;
-    margin-top: 323px;
+    height: 1140px;
+    margin-top: 100px;
     margin-left: 31px;
     border-collapse: collapse;
     font-family: Poppins;
@@ -20,7 +21,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
- }
+    }
 
     th,
     td {
@@ -36,6 +37,7 @@
         color: #D6D6D6;
         ;
     }
+
     .pagination {
         display: flex;
         justify-content: center;
@@ -43,12 +45,12 @@
         margin-top: 70px;
         width: 602px;
         height: 80px;
-    
+
         button {
             width: 80px;
             height: 80px;
             border-radius: 50%;
-            border: 2px solid ;
+            border: 2px solid;
             border-color: #811AC0;
             background-color: transparent;
             color: white;
@@ -56,36 +58,51 @@
             font-size: 18px;
             cursor: pointer;
             transition: background-color 0.3s;
-            
+
             &:hover {
-                background-color:#811AC0;
+                background-color: #811AC0;
             }
-    
+
             &.active {
                 background-color: #811AC0;
             }
-    
+
             &:not(:last-child) {
                 margin-right: 10px;
             }
         }
-   
-        button.prev, button.next {
+
+        button.prev,
+        button.next {
             width: 80px;
             height: 80px;
-            
+
         }
-    
+
         button.prev:before {
             content: "<";
         }
-    
+
         button.next:before {
             content: ">";
         }
-   
-   
-   
+
+
+
+    }
+
+    .Search-UsersTable {
+        width: 704px;
+        height: 68px;
+        margin-bottom:80px;
+        left: 368px;
+        border-radius: 8px;
+        border: 1px solid;
+        border-color: #E7E6E6;
+        background-color:#171717 ;
+        color:  #717171;
+        font-size: 18px;
+        
     }
 
 
