--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -1,9 +1,9 @@
 .tabs button {
     background: none;         
-    border: none;      
-         
-           
-    color: white;             
+    border: none;         
+     width: 221px;      
+    color:  #D6D6D6;
+    font-size: 24px;             
     padding: 10px 20px;       
     margin-right: 15px;       
     cursor: pointer;          
@@ -12,9 +12,13 @@
 }
 
 .tabs button.active {
-    border-bottom: 4px solid pink;  
+    border-bottom: 4px solid #811AC0 ;  
 }
 .Profile {
-    margin-top: 362px;
-    margin-left:41%;
+    margin-top: 150px;
+    margin-left:319px;
+
+    .tab-content{
+        width: 200%;
+    }
 }
