feat(UserProfile.tsx): link para voltar para página inicial adicionado

--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -18,7 +18,8 @@
     margin-top: 150px;
     margin-left:319px;
 
-    .tab-content{
-        width: 200%;
-    }
+}
+.back-button {
+    color: #717171;
+
 }
