--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -1,25 +1,50 @@
 .tabs button {
-    background: none;         
-    border: none;         
-     width: 221px;      
-    color:  #D6D6D6;
-    font-size: 24px;             
-    padding: 10px 20px;       
-    margin-right: 15px;       
-    cursor: pointer;          
-    outline: none;            
-    transition: border-width 0.3s;  
+    background: none;
+    border: none;
+    width: 221px;
+    color: #D6D6D6;
+    font-size: 24px;
+    padding: 10px 20px;
+    margin-right: 15px;
+    cursor: pointer;
+    outline: none;
+    transition: border-width 0.3s;
 }
 
 .tabs button.active {
-    border-bottom: 4px solid #811AC0 ;  
+    border-bottom: 4px solid #811AC0;
 }
+
+
 .Profile {
     margin-top: 150px;
-    margin-left:319px;
+    margin-left: 319px;
 
 }
+
 .back-button {
     color: #717171;
 
+}
+
+.info-label {
+    font-weight: 500px;
+    margin-right: 5px;
+    color: #fff;
+    margin-bottom: -8px;
+}
+
+
+.tab-content{
+   
+   padding-top: 45px;
+    p{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 25px;
+        
+        color: #D4D4D4;
+        
+        
+    }
 }
