--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   font-family: "Roboto";
   color: #fff;
-  background-color: #171717
+  background-color: #171717;
+  
 }
 
 a {
