--- a/src/components/UsersTable/UsersTable.scss
+++ b/src/components/UsersTable/UsersTable.scss
@@ -37,6 +37,11 @@
         color: #D6D6D6;
         ;
     }
+    .hr {
+        width: 100%;
+        border: 1px solid #2D2B2B;
+        margin-bottom: 19px;
+    }
 
     .pagination {
         display: flex;
